--- a/Newbase-newStyle/components/_carDamage.scss
+++ b/Newbase-newStyle/components/_carDamage.scss
@@ -47,7 +47,7 @@
     }
 
     .x-damageTypeAndCamera {
-        display: inline-block;
+        display: flex;
         width: 100%;
 
         .x-selectDamageType {
