--- a/Newbase-newStyle/components/_mandatory.scss
+++ b/Newbase-newStyle/components/_mandatory.scss
@@ -3,7 +3,7 @@
 
 //required-control//
        
-     
+.mandatory.xstyle-lookup-wrapper,
 .mandatory.p-floating-container,
 .xstyle-numberrange-wrapper.mandatory,
 .xstyle-timepicker-wrapper.mandatory,
