--- a/Newbase-newStyle/components/_checkbox.scss
+++ b/Newbase-newStyle/components/_checkbox.scss
@@ -8,15 +8,21 @@
 
     &:checked{
         border: 1px solid #759BAC;
+
+
     }
 
+    &:focus{
+        fill: var(--color-other-white, #FFF);
+             filter: drop-shadow(0px 4px 8px rgba(142, 187, 207, 0.50));
+             box-shadow: none;
+             border: 1px solid var(--vanilla-primary-400, #ACCEDD);
+    }
     &::before{
         color: #759BAC;
     }
 
-    &:focus{
-        filter: drop-shadow(0px 4px 8px rgba(142, 187, 207, 0.50));
-    }
+
  }
 
  label{
