--- a/Newbase-newStyle/components/_intelPhone.scss
+++ b/Newbase-newStyle/components/_intelPhone.scss
@@ -14,13 +14,59 @@
 
     .intl-tel-input {
         width: 100%;
+        display: flex;
+        flex-direction: row-reverse;
+        gap: 5px;
+        height: 40px;
+.flag-container{
+    position: relative;
+
+    .selected-flag{
+        border-radius: 4px;
+        border: 1px solid var(--vanilla-neutral-400, #DEDEDE);
+        background: var(--color-other-white, #FFF);
+        height: 40px;
+        padding-right: 5px;
+
+    }
+}
+
+label{
+  @extend %texbox-label;
+}
+
+input{
+    @extend %texbox-input;
+    
+  &:focus,
+  &:focus-within{
+    box-shadow:$control-box-shadow-focus ;
+    border: $control-border-focus ;
+    outline: none !important;
+  }
+
+  & .k-input-inner{
+    padding: 0
+  }
+
+}
+
+
 
         &.separate-dial-code {
             .selected-dial-code {
                 direction: ltr;
-                line-height: 2.2;
                 padding: 0 !important;
-                float: right;
+                align-items: center;
+                display: grid;
+                height: 38px;
+                color: var(--vanilla-other-black, var(--color-other-black, #000));
+                text-align: right;
+                font-family: Heebo;
+                font-size: 14px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 130%;
             }
         }
 
