--- a/Newbase-newStyle/components/_lookup.scss
+++ b/Newbase-newStyle/components/_lookup.scss
@@ -1,5 +1,77 @@
+.x-description-lookup {
 
+    height: 50px;
+& > div{
+    max-width: none !important;
+}
+mandatory {
+    display: none;
+}
+input{
+    border-radius: 4px;
+    border: 1px solid var(--vanilla-neutral-400, #DEDEDE) !important;
+    background: var(--color-other-white, #FFF);
+    height: 50px;
+    width: 100%;
+    &:focus{
+        box-shadow:$control-box-shadow-focus ;
+        border: $control-border-focus ;
+        outline: none !important;
+    }
+}
 
+.x-selection-lookup-button {
+    border-radius: 4px;
+    border: 1px solid var(--vanilla-neutral-300, #E7E7E7);
+    background: var(--vanilla-neutral-100, #F8F8F8);
+    width: 50px;
+    height: 50px;
+    display: grid;
+    align-items: center;
+}
+}
+
+.x-selection-lookup {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    gap: 5px;
+
+& > div{
+    max-width: none !important;
+}
+.mandatory {
+    display: none;
+}
+input{
+    border-radius: 4px;
+    border: 1px solid var(--vanilla-neutral-400, #DEDEDE) !important;
+    background: var(--color-other-white, #FFF);
+    &:focus{
+        box-shadow:$control-box-shadow-focus ;
+        border: $control-border-focus ;
+        outline: none !important;
+    }
+}
+
+.x-selection-lookup-button {
+    border-radius: 4px;
+    border: 1px solid var(--vanilla-neutral-300, #E7E7E7);
+    background: var(--vanilla-primary-500, #8EBBCF);
+    width: 50px;
+    height: 50px;
+    display: grid;
+    align-items: center;
+}
+
+label{
+    @extend %texbox-label;
+}
+
+.x-input-group-text {
+    background: none;
+    color: white;
+}
+}
 .k-rtl {
     .x-lookup {
         input {
@@ -55,10 +127,9 @@
             }
 
             .x-description-input {
-                border-radius: 5px;
-                width: 100%;
+         
                 // height: 37px;
-                height: 35px;
+      
             }
         }
     }
