--- a/Newbase-newStyle/components/_multichoice.scss
+++ b/Newbase-newStyle/components/_multichoice.scss
@@ -8,54 +8,51 @@
     .x-multichoice-ul {
         list-style: none;
         width: 100%;
-
+        border-radius: 4px;
+        gap: 10px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
         li {
             display: inline-block;
             padding: 0;
             width: 100%;
-
+            border-radius: 4px;
+            border: 1px solid var(--vanilla-neutral-400, #DEDEDE);
+            background: var(--vanilla-neutral-200, #F5F5F5);
+            max-width: none;
+            padding: 0px 10px;
             .x-multichoice-row {
                 display: block;
-                padding: 5px;
-                margin: 0 1px 1px 0;
-
+              
                 label {
                     text-overflow: ellipsis;
-                    overflow: hidden;
                     cursor: pointer;
-
+                    margin: 0;
+                    color: var(--vanilla-other-black, var(--color-other-black, #000));
+                    text-align: center;
+                    font-family: Heebo;
+                    font-size: 14px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 120%;
                     &:before {
-                        display: inline-block;
-                        content: "+";
-                        margin: 0 4px 0 4px;
-                        width: 20px;
-                        height: 20px;
-                        border: 1.8px solid #425fd6;
-                        border-radius: 100%;
-                        vertical-align: middle;
-                        color: #425fd6;
-                        font-size: 15px;
-                        text-align: center;
-                        font-weight: 600;
-                        line-height: 1.2em;
-                        transition: transform 0.25s ease-in-out;
+                        content: "";
                     }
                 }
 
-                input[type="checkbox"] {
-                    display: none;
+            input{
+                display: none;
+            }
+            }
+            
 
-                    &:checked {
-                        +label {
-                            &:before {
-                                background: #f95e5e;
-                                border-color: #f95e5e;
-                                color: #fff;
-                                transform: rotate(135deg);
-                                transform-origin: center center center;
-                            }
-                        }
-                    }
+            &:has(input:checked){
+                border-radius: 4px;
+                border: 1px solid var(--vanilla-primary-400, #ACCEDD);
+                background: var(--vanilla-primary-500, #8EBBCF);
+
+                label{
+                    color: white;
                 }
             }
 
