--- a/Newbase-newStyle/components/_radio-button.scss
+++ b/Newbase-newStyle/components/_radio-button.scss
@@ -11,4 +11,30 @@
     .x-radio-spacer {
         margin-bottom: 5px;
     }
+
+    .x-radio-input{
+        border: 1px solid #80A9BB;
+
+        &:checked{
+            &:before{
+                background: #80A9BB;;
+            }
+
+            &:focus{
+                filter: drop-shadow(0px 4px 8px rgba(142, 187, 207, 0.50));
+                border: 1px solid #80A9BB;
+            }
+        }
+    }
+
+    label{
+        color: var(--black-text, var(--color-other-black, #000));
+        text-align: right;
+        font-feature-settings: 'clig' off, 'liga' off;
+        font-family: Heebo;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 18px;
+    }
 }
