--- a/Newbase-newStyle/components/_textbox.scss
+++ b/Newbase-newStyle/components/_textbox.scss
@@ -4,7 +4,7 @@
 
 
 
-.xstyle-textcontrol-wrapper {
+.xstyle-textcontrol-wrapper,.xstyle-testcontrol-wrapper {
     margin-top: 15px;
 // disable // 
 
