--- a/Newbase-newStyle/components/_upload.scss
+++ b/Newbase-newStyle/components/_upload.scss
@@ -1,4 +1,6 @@
 .k-upload {
+
+
     background: transparent;
     border: 0;
 
@@ -8,7 +10,7 @@
         background-image: none;
 
         .k-upload-button {
-            margin-right: 0 !important;
+            margin-right: 0 ;
 
             .x-upload_Button {
                 width: 100%;
@@ -27,4 +29,290 @@
         font-size: 1.1em;
         font-weight: bold;
     }
+
+
+
 }
+
+
+
+.xstyle-upload-wrapper{
+    
+    label{
+        @extend %texbox-label;
+    }
+    & .k-file-group.k-i-file-config {
+        font-size: 22px;
+        color: #7e7b7b ;
+        top: 4px;
+        &::before {
+          content: "\e9ad" ;
+          font-family: "icomoon";
+        }
+      }
+    
+      & .k-file-success .k-progress {
+        background-color: #15b0c5;
+      }
+    
+      & .k-file.k-file-error {
+        & .k-file-group.k-i-file-config {
+          font-size: 22px;
+          color: #7e7b7b ;
+          top: 4px;
+          &::before {
+            content: "\e9b0";
+            font-family: "icomoon";
+          }
+        }
+      }
+    
+      & .k-file.k-file-success {
+        & .k-file-group.k-i-file-image {
+          font-size: 22px;
+          color: #7e7b7b ;
+          top: 4px;
+          &::before {
+            content: "\e9af";
+            font-family: "icomoon";
+          }
+        }
+    
+        & .k-file-group.k-i-file-config {
+          font-size: 22px;
+          color: #7e7b7b ;
+          top: 4px;
+          &::before {
+            content: "\e9ad" ;
+            font-family: "icomoon";
+          }
+        }
+    
+        & .k-file-group.k-i-file-txt {
+          font-size: 22px;
+          color: #7e7b7b ;
+          top: 4px;
+          &::before {
+            content: "\e9b6";
+            font-family: "icomoon";
+          }
+        }
+    
+        & .k-file-group.k-i-file-data {
+          font-size: 22px;
+          color: #7e7b7b ;
+          top: 4px;
+          &::before {
+            content: "\e9ac";
+            font-family: "icomoon";
+          }
+        }
+    
+        & .k-file-group.k-i-file {
+          font-size: 22px;
+          color: #7e7b7b ;
+          top: 4px;
+          &::before {
+            content: "\e9ae";
+            font-family: "icomoon";
+          }
+        }
+      }
+
+    .k-dropzone{
+         margin-bottom:5px;
+    }
+    
+    .k-focus{
+        box-shadow: none ;
+    }
+    
+    
+    & [class^="k-file-validation-message !k-text-success"] {
+        font-family: "Heebo" ;
+        font-style: normal ;
+        font-weight: 400 ;
+        font-size: 12px;
+        color: $upload-color-success ;
+    
+      }
+      
+      & [class="k-file-validation-message !k-text-error"] {
+        font-family: "Heebo" ;
+        font-style: normal ;
+        font-weight: 400 ;
+        font-size: 12px;
+      }
+        & .k-file-invalid{
+            border-top: 1px solid $upload-border-border-top ;
+            border-bottom: none ;
+            & .k-file-name{
+                font-weight: 500 ;
+                font-size: 14px ;
+                color: $upload-color-file-name ;
+                font-family: 'Heebo';
+            }
+    
+    
+            & .k-file-invalid-group-wrapper{
+                & .k-icon{
+                    color: $upload-color-icon ;
+                    font-size: 30px;
+                    top: 2px;
+                    &::before{
+                        content: "\e9b0" ;
+                        font-family: 'icomoon' ;
+                    }
+                }
+            }
+        }
+    
+    
+        & .k-upload-async{
+    
+            & .k-button-solid-base.k-upload-button{
+    
+           
+    
+                &.k-state-focused{
+                    box-shadow: none ;
+                }
+              
+            }
+            & .k-button-solid-base:focus{
+                box-shadow: none ;
+                border: none ;
+            }
+            & .k-i-close{
+                &::before{
+                    content: "\e904";
+                    font-family: 'icomoon';
+                    font-weight: bolder;
+                    font-size: 12px;
+                    color: $upload-color-icon ;
+                }
+            }
+    
+    
+            & .k-file-group-wrapper{
+                & .k-icon{
+                    font-size: 30px;
+                    top: 2px;
+    
+                    &.k-i-file-pdf{
+                    &::before{
+                        content: "\ea65" ;
+                        color: $upload-color-icon ;
+                        font-family: 'icomoon';
+                    }
+    
+                    &:after{
+                        content: "\ea66" ;
+                        color: $upload-color-icon ;
+                        font-family: 'icomoon';
+                    }
+                }
+    
+                &.k-i-file-data{
+                    &::before{
+                        content: "\ea5e" ;
+                        color:$upload-color-icon ;
+                        font-family: 'icomoon';
+                    }
+    
+                    &:after{
+                        content: "\ea5f" ;
+                        color: $upload-color-icon ;
+                        font-family: 'icomoon';
+                    }
+                }
+                }
+            }
+            
+            & .k-file.k-file-success{
+                border-top: 1px solid $upload-border-border-top ;
+                border-color: $upload-border-border-top;
+                border-bottom: none ;
+            }
+    
+            & .k-upload-files.k-reset{
+                border: none ;
+            }
+    
+            & .k-file-name{
+                font-weight: 500 ;
+                font-size: 14px ;
+                color: black ;
+                font-family: 'Heebo';
+            }
+    
+    
+            &.k-upload-empty{
+    
+           
+                & .k-button-solid-base.k-upload-button{
+    
+                   
+                    font-weight: 400 ;
+                    &.k-state-focused{
+                        box-shadow: none ;
+                    }
+                  
+                }
+            }
+    
+    
+            
+    
+            & .k-button-solid-base.k-upload-button{
+                border: none;
+                color:white;
+                background-color: #8EBBCF;
+                border-radius: 4px;
+                height: 40px ;
+                font-family: Heebo;
+                font-size: 14px;
+                font-style: normal;
+                font-weight: 500;
+            & span{
+                
+                & span.k-icon{
+                    margin-left: 10px ;
+                    &::before{
+                        color:white;
+                        font-size: 22px ;  
+                    }
+                }
+            }
+    
+            &:focus{
+                background: #759BAC;
+            }
+    
+            &:hover{
+                border: none;
+                background-color: #ACCEDD;
+        
+                span{
+                    color: white;
+                }
+            
+        
+                & span{
+                
+                    & span.k-icon{
+                     
+                        &::before{
+                            color: white;
+            
+                        }
+                    }
+                }
+    
+            
+            }
+    
+     
+        }
+    }
+    }
