--- a/Newbase-newStyle/components/container-controls/_row.scss
+++ b/Newbase-newStyle/components/container-controls/_row.scss
@@ -13,7 +13,8 @@ mainbody{
     border: none;   
     box-shadow: none;
     border-radius: 8px;
-    margin: auto;
+    margin-top: 15px;
+    margin-bottom: 15px;
     padding: 20px;
 
     
