--- a/Newbase-newStyle/components/newStyle.scss
+++ b/Newbase-newStyle/components/newStyle.scss
@@ -99,9 +99,10 @@
 @import '../components/toolbar';
 
 @import '../pages/login';
-@import '../../studio/style.scss';
+//@import '../../studio/style.scss';
 @import '../pages/receipt';
 @import '../pages/meeting';
+@import '../../studio/style.scss';
 
 
  @import '../pages/Tass/errorPage';
