--- a/studio/components/_header.scss
+++ b/studio/components/_header.scss
@@ -38,6 +38,11 @@
           color: #000;
           font-size: 25px; 
           font-weight: 200;
+
+          &:hover{
+
+            color: #159BC5;
+          }
       }
   }
 }
