--- a/copy/portal/PortalTafnit/bin/style.css
+++ b/copy/portal/PortalTafnit/bin/style.css
@@ -4610,12 +4610,12 @@ header.navbar-fixed-top.header-suppliers.xtaf-mobile .x-itoolbar .k-toolbar-item
   padding-right: 20px !important;
 }
 #TafnitCore_SaaSServer_Portal_B2B_TafnitSelfService_UI_ServiceCallCreate .xtaf-cube-upload {
-  max-width: 250px;
   border-radius: 10px;
   background: #FFF;
   box-shadow: 0px 0px 10px 0px rgba(103, 103, 103, 0.15);
   padding: 10px;
-  margin-bottom: 15px;
+  margin-top: 0 !important;
+  width: 100%;
 }
 #TafnitCore_SaaSServer_Portal_B2B_TafnitSelfService_UI_ServiceCallCreate .xtaf-cube-upload .k-icon::before {
   color: #690779;
@@ -4634,6 +4634,9 @@ header.navbar-fixed-top.header-suppliers.xtaf-mobile .x-itoolbar .k-toolbar-item
   font-style: normal;
   font-weight: 400;
   line-height: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 #TafnitCore_SaaSServer_Portal_B2B_TafnitSelfService_UI_ServiceCallCreate .mt-26 {
   margin-top: 26rem !important;
@@ -4711,6 +4714,32 @@ header.navbar-fixed-top.header-suppliers.xtaf-mobile .x-itoolbar .k-toolbar-item
   line-height: 20px;
 }
 
+div[uxid=ctserciveCallDesc2] .templatex-wrapper {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 15px;
+}
+
+@media screen and (min-width: 1366px) and (max-width: 1920px) {
+  div[uxid=ctserciveCallDesc2] .templatex-wrapper {
+    grid-template-columns: repeat(5, 1fr);
+  }
+}
+@media screen and (min-width: 1000px) and (max-width: 1366px) {
+  div[uxid=ctserciveCallDesc2] .templatex-wrapper {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1000px) {
+  div[uxid=ctserciveCallDesc2] .templatex-wrapper {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media screen and (min-width: 600px) and (max-width: 768px) {
+  div[uxid=ctserciveCallDesc2] .templatex-wrapper {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
 #TafnitCore_SaaSServer_Portal_B2B_TafnitSelfService_UI_SelectMobile mainbody .row.xtaf-btn-footer > .col.x-col {
   grid-template-columns: 1fr 1fr !important;
 }
