--- a/base-newStyle copy/components/bin/newStyle.css
+++ b/base-newStyle copy/components/bin/newStyle.css
@@ -9067,7 +9067,7 @@ mainbody > .row.x-taas-header img,
   position: relative;
 }
 #TafnitCore_System_UI_App_Tools_Studio_UXStudio .container.pageContainer.xtafnit_pageContainer {
-  margin: 0;
+  margin: 0 !important;
 }
 #TafnitCore_System_UI_App_Tools_Studio_UXStudio div[uxid=colControlType] {
   display: flex;
