--- a/site/Aloni/bin/style.css
+++ b/site/Aloni/bin/style.css
@@ -7637,7 +7637,7 @@ label.btn {
   position: relative;
 }
 #TafnitCore_System_UI_App_Tools_Studio_UXStudio .container.pageContainer.xtafnit_pageContainer {
-  margin: 0;
+  margin: 0 !important;
 }
 #TafnitCore_System_UI_App_Tools_Studio_UXStudio div[uxid=colControlType] {
   display: flex;
@@ -9775,6 +9775,7 @@ label.btn {
 }
 
 .xtafnit_pageContainer, #uber-container {
+  padding: 0;
   padding: 0;
 }
 
