--- a/Newbase-newStyle/components/bin/newStyle.css
+++ b/Newbase-newStyle/components/bin/newStyle.css
@@ -9771,6 +9771,7 @@ label.btn {
 
 .x-control-devmode-wrapper.s-control-devmode-wrapper {
   position: absolute;
+  position: absolute;
 }
 
 .xtafnit_pageContainer, #uber-container {
