--- a/Newbase-newStyle/components/newStyle.scss
+++ b/Newbase-newStyle/components/newStyle.scss
@@ -116,6 +116,7 @@
 
  .x-control-devmode-wrapper.s-control-devmode-wrapper {
   position: absolute;
+  position: absolute;
 }
 
 .xtafnit_pageContainer ,#uber-container{
