--- a/Newbase-newStyle/components/bin/newStyle.css
+++ b/Newbase-newStyle/components/bin/newStyle.css
@@ -1622,6 +1622,9 @@ h4.x-cell-header.s-cell-header {
 
 .xstyle-barcodetextcontrol-wrapper input.k-textbox.x-textbox {
   padding-right: 40px;
+  background: #fff;
+  margin: 0;
+  padding: 0;
 }
 
 .barcodeIcon {
