--- a/copy/portal/Funding/bin/style.css
+++ b/copy/portal/Funding/bin/style.css
@@ -1689,6 +1689,9 @@ h4.x-cell-header.s-cell-header {
 
 .xstyle-barcodetextcontrol-wrapper input.k-textbox.x-textbox {
   padding-right: 40px;
+  background: #fff;
+  margin: 0;
+  padding: 0;
 }
 
 .barcodeIcon {
@@ -9837,6 +9840,7 @@ label.btn {
 }
 
 .x-control-devmode-wrapper.s-control-devmode-wrapper {
+  position: absolute;
   position: absolute;
 }
 
