gal-update barcode  1.1.24

--- a/Newbase-newStyle/components/Media-Control/_barcode.scss
+++ b/Newbase-newStyle/components/Media-Control/_barcode.scss
@@ -2,8 +2,10 @@
 .xstyle-barcodetextcontrol-wrapper{
     input.k-textbox.x-textbox{
         padding-right: 40px;
-     
-
+        background: #fff;
+        margin: 0;
+        padding: 0;
+        
     }
 }
 
